tests/fixtures/syntax_rules/neg/r003-named-return.tsx
/** Negative: hook returns named object — clean. */
export function useToggle(initial: boolean) {
  const [value, setValue] = React.useState(initial);
  const toggle = React.useCallback(() => setValue((v) => !v), []);
  return { value, toggle };
}
